<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:orientation="vertical">

	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		tools:ignore="MissingConstraints">
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/connected_device"
			android:layout_weight="2"
			android:text="@string/nodevice"
			android:textSize="12dp"/>
	</LinearLayout>
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		tools:ignore="MissingConstraints">

		<Button
			android:id="@+id/but_menu"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="菜单"
			tools:ignore="MissingConstraints" />

		<Button
			android:id="@+id/disconnectButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="12dp"
			android:text="@string/disconnect" />
	</LinearLayout>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<Button
			android:id="@+id/forWard"
			android:layout_width="match_parent"
			android:layout_height="150dp"
			android:layout_alignParentTop="true"
			android:layout_centerInParent="true"
			android:text="@string/forWard"
			android:textSize="20sp"
			/>

		<Button
			android:id="@+id/towardsRight"
			android:layout_width="130dp"
			android:layout_height="220dp"
			android:layout_centerInParent="true"
			android:layout_alignParentRight="true"
			android:text="@string/towardsRight"
			android:textSize="20sp"
			/>

		<Button
			android:id="@+id/towardsLeft"
			android:layout_width="130dp"
			android:layout_height="220dp"
			android:layout_alignParentLeft="true"
			android:layout_centerInParent="true"
			android:text="@string/towardsLeft"
			android:textSize="20sp" />

		<Button
			android:id="@+id/backWards"
			android:layout_width="match_parent"
			android:layout_height="150dp"
			android:layout_centerInParent="true"
			android:layout_alignParentBottom="true"
			android:text="@string/backWards"
			android:textSize="20sp" />

		<Button
			android:id="@+id/towardsStop"
			android:layout_width="150dp"
			android:layout_height="220dp"
			android:layout_centerInParent="true"
			android:layout_centerHorizontal="true"
			android:text="@string/towardsStop"
			android:textSize="20sp" />
	</RelativeLayout>

</LinearLayout>